# project-minerva

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  TASK-FIX.md  TASK-REFACTOR.md  TASK.md  environment.yml  pyproject.toml  requirements.txt
.agents/skills/: 13f-analysis  image-generation  xlsx
.claude/agent-memory/business-analyst/: MEMORY.md  research-patterns.md
.claude/agent-memory/extract/: MEMORY.md
.claude/agent-memory/search/: MEMORY.md
.claude/agents/: business-analyst.md  extract.md  search.md
.claude/skills/13f-analysis/: SKILL.md
.claude/skills/analyze-business/: SKILL.md
.claude/skills/collect-evidence/: SKILL.md
.claude/skills/learn/: SKILL.md
.claude/skills/xlsx/: SKILL.md
.obsidian/: workspace.json
ai-util/: Makefile  README.md  pyproject.toml
ai-util/src/aitoolkit/: mathlib.py  plotting.py
ai-util/src/aitoolkit/client/: __init__.py  base.py  claude.py  gemini.py  openai.py  togetherai.py  util.py
ai-util/src/aitoolkit/fileio/: __init__.py  encoder.py  file.py  fileio.py
ai-util/src/aitoolkit/kb/: __init__.py  clarity_output.py  constant.py  db_connection.py  user_report.py
ai-util/src/aitoolkit/ml/: tuning.py
ai-util/src/aitoolkit/util/: exceptions.py  llm_util.py  logger.py
ai-util/tests/: test_file.py  test_math.py
dashboard/: app.py
dashboard/static/: style.css
dashboard/templates/: base.html  company.html  compare.html  health.html  heatmap.html  overview.html  trends.html
dashboard/templates/partials/: dept_mix.html  trend_data.html
data/: milvus_demo.db
docs/: 00-jobwatch-architecture.md  02-zettel-wiki-v3-design.md  05-morning-market-brief-cli-gap-analysis.md  06-collect-evidence-analyze-business-cli-plan.md  07-collect-evidence-analyze-business-skill-update-notes.md  08-robinhood-session-trace-audit.md  09-browser-fallback-improvement-plan.md  10-llm-wiki-zettelkasten-design.md  11-minerva-evidence-starter-live-tested-guide.md  12-minerva-evidence-v2-zero-based-redesign.md  13-zettel-wiki-v2-upgrade-plan.md  14-evidence-v2-quickstart.md  15-collect-evidence-research-upgrade-plan.md  16-analyze-business-wiki-integration-plan.md  17-analyze-business-v2-improvement-plan.md  18-minerva-extract-cli-tdd-plan.md  19-bare-invocation-help-plan.md  INDEX.md
docs/analysis/: 00-zettel-wiki-v1-trace-analysis.md  01-zettel-wiki-v2-trace-analysis.md  02-zettel-wiki-v3-trace-analysis.md  03-oracle-deep-dive-v1-session-trace.md  04-oracle-deep-dive-v2-session-trace.md  INDEX.md
docs/plans/: 2026-04-22-evidence-v2-implementation-plan.md  2026-05-03-morning-brief-v2-news-collection.md
earnings-digest/: pyproject-old.toml  pyproject.toml
earnings-digest/src/: main.py
earnings-digest/src/earnings_digest/: crew.py
earnings-digest/src/earnings_digest/config/: agents.yaml  tasks.yaml
earnings_digest/: README.md
earnings_digest/output/: earnings_call_digest.md
earnings_digest/src/earnings_digest/: main.py
knowledge-base/: LICENSE  README.md  environment.yml  pyproject.toml
knowledge-base/src/: chunk_transcripts.py  init_kb.py  init_tickers.py  manage_milvus.py  query.py  scrape_transcripts.py
knowledge-base/src/knowledge/: __init__.py
knowledge-base/src/knowledge/database/: __init__.py  kb.py  kb_util.py  scrape.py
knowledge-base/src/knowledge/llm/: chunk.py  client.py  useful.py
knowledge-base/src/knowledge/util/: encoder.py  file.py
knowledge-base/src/minerva/knowledge/: kb.py  kb_util.py  scrape.py
knowledge-base/src/minerva/llm/: client.py
knowledge-base/src/minerva/util/: encoder.py  file.py
knowledge-base/src/minerva_knowledge/: __init__.py
knowledge-base/src/minerva_knowledge/database/: __init__.py  kb.py  scrape.py  vector_db.py
knowledge-base/src/minerva_knowledge/llm/: chunk.py  useful.py
knowledge-base/src/minerva_knowledge/util/: env.py  file.py  mongodb.py
profiles/analysis/context/: default.yaml
profiles/evidence/coverage/: default.yaml  test-minimal.yaml
profiles/evidence/extract/: default.yaml
scripts/: export_environment.sh  fix_ticker_nesting.py  merge_news.py  run_morning_brief.sh  run_morning_brief_v1.sh
scripts/prompts/: collect_news.md  collect_news_webfetch.md
seven-power-analyst/: README.md  pyproject.toml
seven-power-analyst/src/seven-power-analyst/: crew.py
seven-power-analyst/src/seven_power_analyst/: crew.py  main.py
seven-power-analyst/src/seven_power_analyst/config/: agents.yaml  tasks.yaml
src/: .gitignore  chunk_transcripts.py  init_kb.py  init_milvus.py  init_tickers.py  manage_milvus.py  query.py  test_export.py  test_minerva.py
src/harness/: __init__.py  cli.py  config.py  context.py  delegate.py  loop.py  memory.py  morning_brief.py  output.py  portfolio_state.py
src/harness/commands/: __init__.py  analysis.py  analyze.py  brief.py  codex.py  common.py  evidence.py  extract.py  fileinfo.py  fs.py  knowledge.py  memory_cmd.py  plot.py  portfolio.py  read.py  report.py  research.py  sec.py  valuation.py  web.py
src/jobwatch/: classifier.py  config.py  crawler.py  db.py  models.py
src/jobwatch/ats/: _utils.py  (+4 more)
src/minerva/: formatting.py  kb.py  learner.py  llm.py  minerva.py  models.py  plotting.py  report_generator.py  scrape.py  sec.py  text_analysis.py  valuation.py  vector_db.py
tests/: conftest.py  test_formatting_xml.py  test_plotting.py  test_text_analysis.py
tests/test_harness/: test_13f_format.py  test_analyze.py  test_bare_invocation.py  test_cli.py  test_codex.py  test_common.py  test_context.py  test_csv_normalization.py  test_delegate.py  test_evidence.py  test_evidence_audit.py  test_evidence_ledger.py  test_evidence_migration.py  test_evidence_v2_cli.py  test_evidence_v2_downstream.py  test_extract.py  test_fileinfo.py  test_fs.py  test_knowledge.py  test_loop.py  test_memory.py  test_morning_brief.py  test_output.py  test_plot.py  test_read.py  test_report.py  test_research.py  test_sec.py  test_sec_section_download.py  test_thesis_cards.py  test_valuation.py  test_web.py
tests/test_jobwatch/: test_ashby.py  test_ashby_ssr.py  test_classifier.py  test_crawler.py  test_db.py  test_greenhouse.py
(+107 files in other folders)
