[project]
name = "minerva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "wordcloud>=1.9.6",
    "beautifulsoup4>=4.12.0",
    "edgartools>=3.0.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "xmltodict>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
jobwatch = ["httpx", "anthropic", "openai", "fastapi", "jinja2", "uvicorn"]

[project.scripts]
jobwatch-crawl = "jobwatch.crawler:main"
jobwatch-dashboard = "dashboard.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/minerva", "src/jobwatch", "dashboard"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
