[project]
name = "minerva"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.12.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "openai>=1.0.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "httpx>=0.28.1",
    "typer[all]>=0.16.0",
    "wordcloud>=1.9.6",
    "edgartools>=3.0.0",
    "lxml>=5.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "xmltodict>=0.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
jobwatch = ["openai", "fastapi", "jinja2", "uvicorn"]

[project.scripts]
jobwatch-crawl = "jobwatch.crawler:main"
jobwatch-dashboard = "dashboard.app:main"
minerva = "harness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/minerva", "src/jobwatch", "src/harness", "dashboard"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
