[tool.poetry]
name = "aitoolkit"
version = "0.1.0"
description = "Various utility functions and toolkit for Jona's AI team"
authors = ["Clay H. Yoo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.34.78"
pandas = "^2.2.1"
numpy = "^1.26.4"
pydantic = "^2.8.0"
pyyaml = "^6.0"
pymongo = "^4.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
