[project]
name = "earnings-digest"
version = "0.1.0"
description = "AI-powered earnings call transcript analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crewai>=0.11.0",
    "minerva-knowledge @ git+https://github.com/your-username/project-minerva.git#subdirectory=knowledge-base",
    "python-dotenv>=1.0.1"
]

[project.scripts]
earnings_digest = "earnings_digest.main:run"
run_crew = "earnings_digest.main:run"
train = "earnings_digest.main:train"
replay = "earnings_digest.main:replay"
test = "earnings_digest.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
