[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minerva-knowledge"
description = "Knowledge base and document processing utilities"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "a-sturluson" },
]
dependencies = [
    "openai>=1.0.0",
    "pymilvus>=2.3.0",
    "pymongo>=4.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "grpcio>=1.70.0",
    "grpcio-tools>=1.70.0",
]
dynamic = ["version"]

[tool.hatch.version]
path = "src/knowledge/__about__.py"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/knowledge"]

[tool.black]
line-length = 88
target-version = ["py38"]
