[project]
name = "seven_power_analyst"
version = "0.1.0"
description = "seven-power-analyst using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
seven_power_analyst = "seven_power_analyst.main:run"
run_crew = "seven_power_analyst.main:run"
train = "seven_power_analyst.main:train"
replay = "seven_power_analyst.main:replay"
test = "seven_power_analyst.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
